flux/apps/mealie/api.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mealie-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie-api
  template:
    metadata:
      labels:
        app: mealie-api
    spec:
      containers:
        - name: mealie-api
          image: 'hkotel/mealie:api-nightly'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000

---
kind: Service
apiVersion: v1
metadata:
  name: mealie-api
  namespace: default
spec:
  selector:
    app: mealie-api
  ports:
    - name: http
      port: 9000
      targetPort: 9000
