flux/apps/mealie/frontend.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mealie-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie-frontend
  template:
    metadata:
      labels:
        app: mealie-frontend
    spec:
      containers:
        - name: mealie-frontend
          image: 'hkotel/mealie:frontend-nightly'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
              readOnly: true
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data

---
kind: Service
apiVersion: v1
metadata:
  name: mealie-frontend
  namespace: default
spec:
  selector:
    app: mealie-frontend
  ports:
    - name: http
      port: 3000
      containerPort: 3000

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: mealie-frontend
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: mealie.dnhrrs.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-frontend
                port:
                  name: http
  tls:
    - secretName: mealie-cert
      hosts:
        - mealie.dnhrrs.xyz
